<resources>
    <string name="app_name">Splash</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="selamat_datang_di_digibraille">Selamat Datang di DigiBraille</string>
    <string name="input_teks_manual">Input Teks Manual</string>
    <string name="upload_foto">Upload Foto</string>
    <string name="akses_kamera">Akses Kamera</string>
    <string name="pilih_dari_galeri">Akses Aplikasi</string>
    <string name="logo">logo</string>
    <string name="masukkan_teks_di_sini">masukkan teks di sini</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="buttoncoba">Button</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="todo1">TODO</string>
    <string name="hapus_gambar">Hapus Gambar</string>
    <string name="output_teks">Output Teks</string>
    <string name="todo2">TODO</string>
    <string name="akses_galeri">Akses Galeri</string>
    <string name="AddImage">Add Image</string>
    <string name="Setting">Settings</string>
    <string name="setup">Setup</string>
</resources>
