<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GalleryActivity">

    <ImageView
        android:id="@+id/img_picker"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:contentDescription="@string/todo2" />

    <Button
        android:text="@string/akses_galeri"
        android:id="@+id/btn_gallery"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:background="@drawable/btn_green"
        android:fontFamily="@font/libel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_picker"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/teks_view1"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_picker" />

    <TextView
        android:id="@+id/teks_output1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/output_teks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_picker" />


</androidx.constraintlayout.widget.ConstraintLayout>